--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
+    "lenis": "^1.1.16",
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.454.0",
     "mini-svg-data-uri": "^1.4.4",
