--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.17",
     "next-themes": "^0.4.3",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
