--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@heroicons/react": "^2.1.5",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.116.2",
     "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.22.0",
     "@vercel/analytics": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
@@ -25,7 +27,9 @@
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.454.0",
     "mini-svg-data-uri": "^1.4.4",
+    "mongodb": "^6.11.0",
     "next": "14.2.17",
+    "next-auth": "^4.24.10",
     "next-themes": "^0.4.3",
     "radix-ui": "^1.0.1",
     "react": "^18",
